--- a/BingeSeriesApp/BingeSeriesApp/DetailView/View/DetailSeriesView.xib
+++ b/BingeSeriesApp/BingeSeriesApp/DetailView/View/DetailSeriesView.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -20,11 +21,11 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" ambiguous="YES" id="i5M-Pr-FkT">
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="CsZ-z6-7Br">
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="CsZ-z6-7Br">
                     <rect key="frame" x="0.0" y="44" width="414" height="818"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nvG-b4-tIx">
@@ -97,6 +98,15 @@
                                                         <action selector="addToLikeAction:" destination="-1" eventType="touchUpInside" id="RbS-bY-jez"/>
                                                     </connections>
                                                 </button>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Qnk-kL-bgy">
+                                                    <rect key="frame" x="10" y="20" width="41" height="31"/>
+                                                    <color key="tintColor" red="0.083048159489999995" green="0.28209883190000001" blue="0.42425535219999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                    <state key="normal" title="Button"/>
+                                                    <buttonConfiguration key="configuration" style="plain" image="chevron.backward" catalog="system" title=" "/>
+                                                    <connections>
+                                                        <action selector="backButton:" destination="-1" eventType="touchUpInside" id="io4-gW-MHl"/>
+                                                    </connections>
+                                                </button>
                                             </subviews>
                                             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                             <constraints>
@@ -118,10 +128,12 @@
                                                 <constraint firstItem="5hZ-bk-d74" firstAttribute="top" secondItem="8AK-LY-AbT" secondAttribute="bottom" constant="40" id="XdL-r6-9fJ"/>
                                                 <constraint firstItem="5hZ-bk-d74" firstAttribute="leading" secondItem="cTI-So-DiJ" secondAttribute="leading" constant="25" id="Zbk-ge-2Fo"/>
                                                 <constraint firstItem="sTt-wm-tXB" firstAttribute="leading" secondItem="cTI-So-DiJ" secondAttribute="leading" constant="40" id="bab-Yc-lEO"/>
+                                                <constraint firstItem="Qnk-kL-bgy" firstAttribute="top" secondItem="cTI-So-DiJ" secondAttribute="top" constant="20" id="bjd-HZ-P0C"/>
                                                 <constraint firstAttribute="height" constant="1150" id="dpr-eA-Xi1"/>
                                                 <constraint firstItem="8AK-LY-AbT" firstAttribute="top" secondItem="njy-T1-XcT" secondAttribute="bottom" constant="15" id="eGa-aa-3P6"/>
                                                 <constraint firstAttribute="trailing" secondItem="5hZ-bk-d74" secondAttribute="trailing" constant="25" id="fpQ-1C-vT0"/>
                                                 <constraint firstItem="Ccj-Nn-QHY" firstAttribute="leading" secondItem="cTI-So-DiJ" secondAttribute="leading" constant="339" id="gZh-WX-sTD"/>
+                                                <constraint firstItem="Qnk-kL-bgy" firstAttribute="leading" secondItem="cTI-So-DiJ" secondAttribute="leading" constant="10" id="hAg-eq-vW3"/>
                                                 <constraint firstItem="sTt-wm-tXB" firstAttribute="top" secondItem="7dC-eC-fP7" secondAttribute="bottom" constant="25" id="mE2-zj-K54"/>
                                                 <constraint firstAttribute="trailing" secondItem="8AK-LY-AbT" secondAttribute="trailing" constant="25" id="oIC-Xe-0DV"/>
                                                 <constraint firstItem="7dC-eC-fP7" firstAttribute="top" secondItem="cTI-So-DiJ" secondAttribute="top" constant="50" id="uAu-ii-eQ1"/>
@@ -167,6 +179,7 @@
         </view>
     </objects>
     <resources>
+        <image name="chevron.backward" catalog="system" width="96" height="128"/>
         <image name="suit.heart" catalog="system" width="128" height="109"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
